--- a/index.html
+++ b/index.html
@@ -1,12 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8" />
+        <meta charset="utf-8" /> 
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>hangman</title>
         <script src="index.js"></script>
+        <link href="index.css" rel="stylesheet" />
     </head>
     <body>
-        
+        <div class="all-keyboard"> 
+            <div class="keyboard-row1">
+                <button onclick="btnLetterClick('Q')" class="char-btn">Q</button> 
+                <button onclick="btnLetterClick('W')" class="char-btn">W</button>
+                <button onclick="btnLetterClick('E')" class="char-btn">E</button>
+                <button onclick="btnLetterClick('R')" class="char-btn">R</button>
+                <button onclick="btnLetterClick('T')" class="char-btn">T</button>
+                <button onclick="btnLetterClick('Y')" class="char-btn">Y</button>
+                <button onclick="btnLetterClick('U')" class="char-btn">U</button>
+                <button onclick="btnLetterClick('I')" class="char-btn">I</button>
+                <button onclick="btnLetterClick('O')" class="char-btn">O</button>
+                <button onclick="btnLetterClick('P')" class="char-btn">P</button>
+                <br />
+            </div>
+
+            <div class="keyboard-row2">
+                <button onclick="btnLetterClick('A')" class="char-btn">A</button>
+                <button onclick="btnLetterClick('S')" class="char-btn">S</button> 
+                <button onclick="btnLetterClick('D')" class="char-btn">D</button>
+                <button onclick="btnLetterClick('F')" class="char-btn">F</button>
+                <button onclick="btnLetterClick('G')" class="char-btn">G</button>
+                <button onclick="btnLetterClick('H')" class="char-btn">H</button>
+                <button onclick="btnLetterClick('J')" class="char-btn">J</button>
+                <button onclick="btnLetterClick('K')" class="char-btn">K</button>
+                <button onclick="btnLetterClick('L')" class="char-btn">L</button>
+                <br />     
+            </div>
+           
+            <div class="keyboard-row3">
+                <button onclick="btnLetterClick('Z')" class="char-btn">Z</button>
+                <button onclick="btnLetterClick('X')" class="char-btn">X</button>
+                <button onclick="btnLetterClick('C')" class="char-btn">C</button>
+                <button onclick="btnLetterClick('V')" class="char-btn">V</button>
+                <button onclick="btnLetterClick('B')" class="char-btn">B</button>
+                <button onclick="btnLetterClick('N')" class="char-btn">N</button>
+                <button onclick="btnLetterClick('M')" class="char-btn">M</button>              
+            </div>
+        </div>
     </body>
 </html>
