--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
         <div class="gallow"> 
             <canvas id="player-gallow" height="200px" width="150px">\
-                "Browser Not Supported"
+                "Browser Does Not Support Canvas"
 
             </canvas>
         </div>
