--- a/index.html
+++ b/index.html
@@ -12,50 +12,52 @@
             <button class="new-game-btn" onclick="startNewGame()">New Game</button>
             <label id="lblGameStatus" class="game-status">CLICK FOR NEW GAME</label>
         </div>
-        <div class="all-keyboard"> 
-            <div id="Word-blanks"></div>
-            <div class="keyboard-row1">
-                <button onclick="btnLetterClick('Q')" class="char-btn">Q</button> 
-                <button onclick="btnLetterClick('W')" class="char-btn">W</button>
-                <button onclick="btnLetterClick('E')" class="char-btn">E</button>
-                <button onclick="btnLetterClick('R')" class="char-btn">R</button>
-                <button onclick="btnLetterClick('T')" class="char-btn">T</button>
-                <button onclick="btnLetterClick('Y')" class="char-btn">Y</button>
-                <button onclick="btnLetterClick('U')" class="char-btn">U</button>
-                <button onclick="btnLetterClick('I')" class="char-btn">I</button>
-                <button onclick="btnLetterClick('O')" class="char-btn">O</button>
-                <button onclick="btnLetterClick('P')" class="char-btn">P</button>
-                <br />
-            </div>
+        <span>
+            <div class="gallow"> 
+                <canvas id="player-gallow" height="300px" width="300px">\
+                    "Browser Does Not Support Canvas"
 
-            <div class="keyboard-row2">
-                <button onclick="btnLetterClick('A')" class="char-btn">A</button>
-                <button onclick="btnLetterClick('S')" class="char-btn">S</button> 
-                <button onclick="btnLetterClick('D')" class="char-btn">D</button>
-                <button onclick="btnLetterClick('F')" class="char-btn">F</button>
-                <button onclick="btnLetterClick('G')" class="char-btn">G</button>
-                <button onclick="btnLetterClick('H')" class="char-btn">H</button>
-                <button onclick="btnLetterClick('J')" class="char-btn">J</button>
-                <button onclick="btnLetterClick('K')" class="char-btn">K</button>
-                <button onclick="btnLetterClick('L')" class="char-btn">L</button>
-                <br />     
+                </canvas>
             </div>
-           
-            <div class="keyboard-row3">
-                <button onclick="btnLetterClick('Z')" class="char-btn">Z</button>
-                <button onclick="btnLetterClick('X')" class="char-btn">X</button>
-                <button onclick="btnLetterClick('C')" class="char-btn">C</button>
-                <button onclick="btnLetterClick('V')" class="char-btn">V</button>
-                <button onclick="btnLetterClick('B')" class="char-btn">B</button>
-                <button onclick="btnLetterClick('N')" class="char-btn">N</button>
-                <button onclick="btnLetterClick('M')" class="char-btn">M</button>              
-            </div>
-        </div>
-        <div class="gallow"> 
-            <canvas id="player-gallow" height="200px" width="150px">\
-                "Browser Does Not Support Canvas"
+            <div class="all-keyboard"> 
+                <div id="Word-blanks"></div>
+                <div class="keyboard-row1">
+                    <button onclick="btnLetterClick('Q')" class="char-btn">Q</button> 
+                    <button onclick="btnLetterClick('W')" class="char-btn">W</button>
+                    <button onclick="btnLetterClick('E')" class="char-btn">E</button>
+                    <button onclick="btnLetterClick('R')" class="char-btn">R</button>
+                    <button onclick="btnLetterClick('T')" class="char-btn">T</button>
+                    <button onclick="btnLetterClick('Y')" class="char-btn">Y</button>
+                    <button onclick="btnLetterClick('U')" class="char-btn">U</button>
+                    <button onclick="btnLetterClick('I')" class="char-btn">I</button>
+                    <button onclick="btnLetterClick('O')" class="char-btn">O</button>
+                    <button onclick="btnLetterClick('P')" class="char-btn">P</button>
+                    <br />
+                </div>
 
-            </canvas>
-        </div>
+                <div class="keyboard-row2">
+                    <button onclick="btnLetterClick('A')" class="char-btn">A</button>
+                    <button onclick="btnLetterClick('S')" class="char-btn">S</button> 
+                    <button onclick="btnLetterClick('D')" class="char-btn">D</button>
+                    <button onclick="btnLetterClick('F')" class="char-btn">F</button>
+                    <button onclick="btnLetterClick('G')" class="char-btn">G</button>
+                    <button onclick="btnLetterClick('H')" class="char-btn">H</button>
+                    <button onclick="btnLetterClick('J')" class="char-btn">J</button>
+                    <button onclick="btnLetterClick('K')" class="char-btn">K</button>
+                    <button onclick="btnLetterClick('L')" class="char-btn">L</button>
+                    <br />     
+                </div>
+            
+                <div class="keyboard-row3">
+                    <button onclick="btnLetterClick('Z')" class="char-btn">Z</button>
+                    <button onclick="btnLetterClick('X')" class="char-btn">X</button>
+                    <button onclick="btnLetterClick('C')" class="char-btn">C</button>
+                    <button onclick="btnLetterClick('V')" class="char-btn">V</button>
+                    <button onclick="btnLetterClick('B')" class="char-btn">B</button>
+                    <button onclick="btnLetterClick('N')" class="char-btn">N</button>
+                    <button onclick="btnLetterClick('M')" class="char-btn">M</button>              
+                </div>
+            </div>
+         </span>
     </body>
 </html>
