--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </canvas>
             </div>
             <div class="all-keyboard"> 
-                <div id="Word-blanks"></div>
+                <div id="word-blanks"></div>
                 <div class="keyboard-row1">
                     <button onclick="btnLetterClick('Q')" class="char-btn">Q</button> 
                     <button onclick="btnLetterClick('W')" class="char-btn">W</button>
